<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/inner_page"
    tools:context=".fragments.FullTimeLineFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_mahe_romjan"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26dp"
        tools:ignore="SpUsage"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imv_ovocal_d_logo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ovocal_d_logo"
        android:layout_marginEnd="@dimen/rightmargin"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/sub_text_ovocald"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="5dp"
        android:textColor="@color/mild_gray_color"
        android:text="Calcium 500mg legshell source &amp; vitamin D,200 IU Tablet"
        app:layout_constraintTop_toBottomOf="@id/imv_ovocal_d_logo"
        app:layout_constraintStart_toStartOf="@id/imv_ovocal_d_logo"
        app:layout_constraintEnd_toEndOf="@id/imv_ovocal_d_logo"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginEnd="@dimen/rightmargin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_text_ovocald"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttongroups"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:id="@+id/districtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_district_time"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sub_head_line_size"
                tools:ignore="SpUsage"
                android:layout_marginTop="@dimen/top_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/outline_border"
                android:layout_marginTop="@dimen/top_margin"
                android:weightSum="1"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="দশক"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="@dimen/text_medium_14"
                    android:layout_weight=".2"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="তারিখ"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="@dimen/text_medium_14"
                    android:layout_weight=".4"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="সেহেরী"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="@dimen/text_medium_14"
                    android:layout_weight=".2"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="ইফতার"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="@dimen/text_medium_14"
                    android:layout_weight=".2"

                    />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="10"
                tools:listitem="@layout/recv_time_list"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttongroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/bottom_margin"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/text_full_schedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_somoi_schedule"
                android:textColor="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="@dimen/sub_head_line_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_dowa"
                android:background="@drawable/outline_border"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/text_dowa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_dowa"
                android:textColor="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="@dimen/sub_head_line_size"
                app:layout_constraintEnd_toStartOf="@id/text_district_change"
                app:layout_constraintStart_toEndOf="@id/text_full_schedule"
                android:background="@drawable/outline_border"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/text_district_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_district_change"
                android:textColor="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="@dimen/sub_head_line_size"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/outline_border"
                app:layout_constraintStart_toEndOf="@id/text_dowa"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>